# sectionproperties_reporting

./: pyproject.toml
src/sectionproperties_reporting/: __init__.py  extraction.py  serialize.py
