[project]
name = "sectionproperties-reporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connorferster@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpydantic>=1.6.9",
    "pydantic>=2.11.7",
    "sectionproperties>=3.9.0",
]

[project.scripts]
sectionproperties-reporting = "sectionproperties_reporting:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "sectionproperties>=3.9.0",
]
